Aha! Finally fixed the glitch. The issue was that one transition was beginning before the previous one finished, which confused the tweens and their corresponding React Konva nodes. Fixed by renaming everything to be more clear about current state so that accidental overlaps can't happen. It's still not perfect in its clarity but okay for a POC since we're inevitably going to rewrite this code when it comes to actual features.

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -24,6 +24,10 @@ img, picture, svg, video
     float: right
     background-color: white
 
+.error
+    font-weight: bold
+    color: red
+
 .arena
     display: grid
     grid-template-columns: minmax(auto, 1fr) auto
